tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.error
exit status 127
/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:531:80: Warning: evaluation of operator '+'/2 will fail with a 'badarith' exception
%  531|         true -> F_4 = maps:put(lists:flatten(io_lib:format("~p", [N_9])), (nil + 1), F_3),
%     |                                                                                ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:551:37: Warning: evaluation of operator '+'/2 will fail with a 'badarith' exception
%  551|         Exps_3 = maps:put("2", (nil + 5), Exps_2),
%     |                                     ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:563:37: Warning: evaluation of operator '-'/2 will fail with a 'badarith' exception
%  563|         Exps_5 = maps:put("3", (nil - 1), Exps_4),
%     |                                     ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:669:2: Warning: variable 'DenomPow_3' exported from 'case' (line 647, column 17)
%  669| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr} = Fun_33(DenomPow_3, Ip_2, IpStr, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr),
%     |  ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:669:41: Warning: variable 'Prev_3' exported from 'case' (line 647, column 17)
%  669| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr} = Fun_33(DenomPow_3, Ip_2, IpStr, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr),
%     |                                         ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:669:65: Warning: variable 'Sum_3' exported from 'case' (line 647, column 17)
%  669| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr} = Fun_33(DenomPow_3, Ip_2, IpStr, Line, N_11, Prev_3, Primes_4, Pw_2, Sum_3, TermStr),
%     |                                                                 ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:679:2: Warning: variable 'DenomPow_3' exported from 'case' (line 647, column 17)
%  679| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_34(DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr, Sum_3, TermStr),
%     |  ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:679:41: Warning: variable 'Prev_3' exported from 'case' (line 647, column 17)
%  679| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_34(DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr, Sum_3, TermStr),
%     |                                         ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:679:74: Warning: variable 'Sum_3' exported from 'case' (line 647, column 17)
%  679| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_34(DenomPow_3, Ip_2, IpStr_2, Line, N_11, Prev_3, Primes_4, Pw_2, PwStr, Sum_3, TermStr),
%     |                                                                          ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:689:2: Warning: variable 'DenomPow_3' exported from 'case' (line 647, column 17)
%  689| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm_2, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_35(DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr),
%     |  ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:689:52: Warning: variable 'Prev_3' exported from 'case' (line 647, column 17)
%  689| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm_2, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_35(DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr),
%     |                                                    ^

/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl:689:85: Warning: variable 'Sum_3' exported from 'case' (line 647, column 17)
%  689| {DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm_2, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr} = Fun_35(DenomPow_3, Ip_2, IpStr_2, Line, N_11, PadTerm, Prev_3, Primes_4, Pw_2, PwStr_2, Sum_3, TermStr),
%     |                                                                                     ^

N                               Integer Portion  Pow  Nth Term (33 dp)
"-----------------------------------------------------------------------------------------"
escript: exception error: an error occurred when evaluating an arithmetic expression
  in operator  +/2
     called as nil + 5
  in call from main:computeip/2 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 551)
  in call from main:'-main/0-Fun_37_loop/6-0-'/6 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 645)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 718)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/almkvist-giullera-formula-for-pi.erl, line 758)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
